# SmartFarm_MMR

./: .env  .gitignore
install/: local_setup.sh  setup.sh
install/amr_controller/lib/amr_controller/: amr_move_node
install/amr_controller/share/amr_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kinetic/lib/kinetic/: palletizing_node
install/kinetic/share/kinetic/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mmr_interfaces/share/mmr_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mmr_interfaces/share/mmr_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  (+12 more)
install/mmr_orchestrator/lib/mmr_orchestrator/: mmr_orchestrator_node
install/mmr_orchestrator/share/mmr_orchestrator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision/lib/vision/: vision_capture_node
install/vision/share/vision/: package.sh  package.xml
log/: latest_build
src/amr_controller/: package.xml  setup.cfg  setup.py
src/amr_controller/amr_controller/: amr_test.py  move_node.py
src/kinetic/: package.xml  setup.cfg  setup.py
src/kinetic/kinetic/: palletizing_node.py  test_approach.py  xarm_pose_node.py  xarm_pose_server_min.py
src/mmr_interfaces/: CMakeLists.txt
src/mmr_interfaces/action/: Palletize.action
src/mmr_interfaces/srv/: CaptureVision.srv  GetDropPose.srv  MoveArm.srv  ProcessSide.srv
src/mmr_orchestrator/: package.xml  setup.cfg  setup.py
src/mmr_orchestrator/launch/: mmr_system.launch.py
src/mmr_orchestrator/mmr_orchestrator/: mmr_orchestrator_node.py
src/vision/: package.xml  setup.py
src/vision/vision/: strawberry_client.py  vision_capture_node.py
(+56 files in other folders)
