<?xml version="1.0"?>
<package format="3">
  <name>amr_controller</name>
  <version>0.0.1</version>
  <description>AMR move distance service server.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>transforms3d</exec_depend>
  <exec_depend>mmr_interfaces</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
