<?xml version="1.0"?>
<package format="3">
  <name>vision</name>
  <version>0.0.1</version>
  <description>Vision capture service server.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mmr_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
